vlib/v/checker/tests/fn_call_using_none_arg_err.vv
fn f[T](v T) {
	println(v)
}

fn main() {
	f(none)
}
